[package]
name = "sonya-meta"
version = "0.5.0"
edition = "2021"
description = "Common packages for backend and proxy web queue"
repository = "https://github.com/Mnwa/sonya"
readme = "../README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
serde_urlencoded = "0.7"
actix-web = "4"
jsonwebtoken = "7"
openssl = { version = "0.10", features = ["v110"] }
env_logger = "0.9"
log = "0.4"