[package]
name = "sonya-meta"
version = "0.9.4"
edition = "2021"
description = "Common packages for backend and proxy web queue"
repository = "https://github.com/Mnwa/sonya"
readme = "../README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
serde_urlencoded = "0.7"
jsonwebtoken = "8"
env_logger = "0.9"
log = "0.4"
rustls = "0.20"
rustls-pemfile = "1"

[dependencies.actix-web]
version = "4"
features = ["rustls"]