[package]
name = "sonya-proxy"
version = "0.4.0"
edition = "2018"
description = "Proxy for sharding queues of your web queue cluster"
repository = "https://github.com/Mnwa/sonya"
readme = "../README.md"
license = "MIT"
keywords = ["web-queue", "proxy", "queue", "broadcast", "web"]
categories = ["database", "database-implementations", "web-programming", "web-programming::websocket", "web-programming::http-server"]

[features]
default = ["etcd", "api"]
etcd = ["etcd-client"]
api = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = { version = "4.0.0-beta.9", features = ["openssl"] }
actix-web-actors = "4.0.0-beta.7"
awc = "3.0.0-beta.8"
serde = "1"
serde_json = "1"
log = "0.4"
sonya-meta = { version = "0.4", path = "../sonya-meta" }
num_cpus = "1"
ws = "0.9"
futures = "0.3"
async-stream = "0.3"
parking_lot = "0.11"
pin-project-lite = "0.2"
etcd-client = { version = "0.7", optional = true, features = ["tls"] }
derive_more = "0.99"
tokio = { version = "1", features = ["sync"] }
maglev = "0.2"