[package]
name = "sonya-proxy"
version = "0.10.1"
edition = "2021"
description = "Proxy for sharding queues of your web queue cluster"
repository = "https://github.com/Mnwa/sonya"
readme = "../README.md"
license = "MIT"
keywords = ["web-queue", "proxy", "queue", "broadcast", "web"]
categories = ["database", "database-implementations", "web-programming", "web-programming::websocket", "web-programming::http-server"]

[features]
default = ["etcd", "api"]
etcd = ["etcd-client"]
api = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = { version = "4", features = ["rustls"] }
actix-web-actors = "4"
awc = "3"
serde = "1"
serde_json = "1"
log = "0.4"
num_cpus = "1"
ws = "0.9"
futures = "0.3"
async-stream = "0.3"
parking_lot = "0.12"
pin-project-lite = "0.2"
etcd-client = { version = "0.10", optional = true, features = ["tls"] }
derive_more = "0.99"
tokio = { version = "1", features = ["sync"] }
maglev = "0.2"

[dependencies.sonya-meta]
version = "0.10"
path = "../sonya-meta"