[package]
name = "sonya"
version = "0.5.0"
edition = "2021"
description = "Backends for your web queue cluster"
repository = "https://github.com/Mnwa/sonya"
readme = "../README.md"
license = "MIT"
keywords = ["web-queue", "backend", "queue", "broadcast", "web"]
categories = ["database", "database-implementations", "web-programming", "web-programming::websocket", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["etcd", "api"]
etcd = ["etcd-client"]
api = []

[dependencies]
actix = "0.13"
actix-web = { version = "4", features = ["openssl"] }
actix-web-actors = "4"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
async-stream = "0.3"
log = "0.4"
sonya-meta = { version = "0.5", path = "../sonya-meta" }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
etcd-client = { version = "0.7", optional = true, features = ["tls"] }
derive_more = "0.99"

[dependencies.sled]
version = "0.34"
features = ["compression"]
git = "https://github.com/spacejam/sled"
rev = "e95ec05"