[package]
name = "sonya"
version = "0.9.1"
edition = "2021"
description = "Backends for your web queue cluster"
repository = "https://github.com/Mnwa/sonya"
readme = "../README.md"
license = "MIT"
keywords = ["web-queue", "backend", "queue", "broadcast", "web"]
categories = ["database", "database-implementations", "web-programming", "web-programming::websocket", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["etcd", "api"]
etcd = ["etcd-client"]
api = []

[dependencies]

[dependencies.derive_more]
version = "0.99"

[dependencies.futures]
version = "0.3"

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.log]
version = "0.4"

[dependencies.async-stream]
version = "0.3"

[dependencies.serde_json]
version = "1"

[dependencies.serde]
version = "1"

[dependencies.actix]
version = "0.13"

[dependencies.actix-web-actors]
version = "4"

[dependencies.actix-web]
version = "4"
features = ["openssl"]

[dependencies.tokio]
version = "1"
features = ["sync"]

[dependencies.etcd-client]
version = "0.10"
optional = true
features = ["tls"]

[dependencies.rocksdb]
version = "0.19"
default-features = false
features = ["zstd"]

[dependencies.dashmap]
version = "5"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.sonya-meta]
version = "0.9"
path = "../sonya-meta"