[package]
name = "web-queue-meta"
version = "0.1.1"
edition = "2018"
description = "Common packages for backend and proxy web queue"
repository = "https://github.com/Mnwa/web-queue"
readme = "../README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
actix-web = "4.0.0-beta.8"
jsonwebtoken = "7"
openssl = { version = "0.10", features = ["v110"] }