[package]
name = "web-queue-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
serde = "1"
serde_json = "1"
env_logger = "0.9"
log = "0.4"
web-queue-meta = { path = "../web-queue-meta" }
num_cpus = "1"
ws = "0.9"
futures = "0.3"