[package]
name = "web-queue-server"
version = "0.1.1"
edition = "2018"
description = "Backends for your web queue cluster"
repository = "https://github.com/Mnwa/web-queue"
readme = "../README.md"
license = "MIT"
keywords = ["web-queue", "backend", "queue", "broadcast", "web"]
categories = ["database", "database-implementations", "web-programming", "web-programming::websocket", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
async-stream = "0.3"
env_logger = "0.9"
log = "0.4"
web-queue-meta = { version = "0.1", path = "../web-queue-meta" }